# Stride-Dissertation

./: .gitignore  .travis.yml  CMakeCPP.cmake  CMakeConfig.cmake  CMakeLists.txt  CMakeReport.cmake  Makefile  README.md  REMARKS.md  clang.sh  run.sh  temp.json
doc/latex/: 02-Software.tex  03-Simulator.tex  04-Concepts.tex  05-Visualization.tex  06-Appendices.tex  UserManual.tex
docs/: index.html  temp.md
main/: CMakeLists.txt
main/cpp/: CMakeLists.txt
main/cpp/contact/: ContactType.cpp  ContactType.h
main/cpp/execs/: ControlHelper.cpp  GenPopController.cpp  StanController.cpp
main/cpp/geopop/: Daycare.cpp  Daycare.h  DaycareCenter.cpp  DaycareCenter.h  EnhancedCoordinate.h  GeoGrid.cpp  GeoGrid.h  GeoGridBuilder.cpp  GeoGridConfig.cpp  GeoGridConfig.h  GeoGridConfigBuilder.cpp  Location.cpp  Location.h  LocationGrid.h  PreSchool.cpp  PreSchool.h  PreSchoolCenter.cpp  PreSchoolCenter.h
main/cpp/pop/: DefaultPopBuilder.cpp  GeoPopBuilder.cpp  GeoPopBuilder.h  ImportPopBuilder.cpp  Person.cpp  Person.h  Population.cpp  Population.h  SurveySeeder.cpp
main/cpp/prototypes/: JSONArchPrototype.cpp  h5tutr_crtgrpd.cpp
main/cpp/sim/: Sim.cpp
main/cpp/util/: HDF5.cpp  HDF5.h  RunConfigManager.cpp
main/cpp/viewers/: EpiViewer.cpp  EpiViewer.h  QtViewer.cpp  QtViewer.h
main/python/: CMakeLists.txt
main/python/wannes_test/: CMakeLists.txt  R0estimation.py  StochasticAnalysis_stan_infected.csv  commuting.py  deviation.py  immunityLevel.py  opdracht-1.py  runSimulations.py  tesmp.csv
main/r/: CMakeLists.txt
main/resources/: CMakeLists.txt
main/resources/config/: belgium_simulation.xml  belgium_simulation_2018.xml  cedric-no-particip-influenza.xml  cedric-no-particip-measles.xml  cedric-particip-influenza.xml  demographic_profile_default.xml  demographic_profile_regions.xml  flanders_of_belgium_simulation.xml  flanders_simulation.xml  run_commuting_pop.xml  (+8 more)
python_files/: ages_centrumsteden.csv  ages_provinces.csv  calc_citizens_per_province.py  create_major_ages.py  get_town_id.py  new_hh.py  new_hh_major.py
qt/: CMakeLists.txt  Map.qml  Stride.pro  backend.h  location.h  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui  mapcircle.qml  mapcontroller.cpp  mapcontroller.h  qml.qrc  setup.sh
qt/lol/: CMakeLists.txt  CMakeLists.txt.user.4.9-pre1  location.cpp  location.h  locationsModel.cpp  locationsModel.h  uiModel.cpp  uiModel.h
qt/lol/ui/: Map.qml  Page1Form.ui.qml  backend.cpp  backend.h  main.cpp  qml.qrc  setup.sh
resources/cmake/: CMakeLocal.cmake
test/: CMakeLists.txt
test/cpp/: CMakeLists.txt
test/python/: CMakeLists.txt
test/resources/: CMakeLists.txt
(+183 files in other folders)
